# jlab-image-editor

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: editor.ts  factory.ts  icons.ts  index.ts  tokens.ts  toolbar.tsx  widget.ts
src/components/: ImageEditorPanel.tsx
style/: base.css
